--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     "react": "^18.3.1",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.3.1",
-    "react-notion-x": "^6.16.0",
+    "react-fluid-animation": "^1.0.1",
+    "raf": "^3.4.1",
+    "random": "^3.0.6",
     "react-icons": "^5.2.1",
+    "react-notion-x": "^6.16.0",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.5.1",
     "rss": "^1.2.2"
