--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react": "^18.3.1",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.3.1",
-    "react-fluid-animation": "^1.0.1",
+    "three": "^0.162.0",
     "raf": "^3.4.1",
     "random": "^3.0.6",
     "react-icons": "^5.2.1",
