--- a/package.json
+++ b/package.json
@@ -45,20 +45,19 @@
     "react": "^18.3.1",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.162.0",
-    "raf": "^3.4.1",
-    "random": "^3.0.6",
     "react-icons": "^5.2.1",
     "react-notion-x": "^6.16.0",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.5.1",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
+    "@types/three": "^0.169.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
