--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.5.1",
     "rss": "^1.2.2",
+    "sharp": "^0.33.5",
     "three": "^0.162.0"
   },
   "devDependencies": {
