--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check"
   },
   "dependencies": {
+    "@babel/runtime": "^7.25.7",
     "@keyvhq/core": "^2.1.1",
     "@keyvhq/redis": "^2.1.4",
     "@vercel/og": "^0.6.2",
@@ -35,7 +36,7 @@
     "got": "^14.4.2",
     "isomorphic-unfetch": "^4.0.2",
     "lqip-modern": "^2.1.0",
-    "next": "14",
+    "next": "^14.2.14",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
     "notion-utils": "^6.16.0",
@@ -51,7 +52,8 @@
     "react-use": "^17.5.1",
     "rss": "^1.2.2",
     "sharp": "^0.33.5",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "webpack": "^5.95.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.5",
