--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@babel/runtime": "^7.25.7",
     "@keyvhq/core": "^2.1.1",
     "@keyvhq/redis": "^2.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "@vercel/og": "^0.6.2",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "expiry-map": "^2.0.0",
     "fathom-client": "^3.7.2",
     "got": "^14.4.2",
@@ -62,7 +66,7 @@
     "@types/react": "^18.3.3",
     "@types/three": "^0.169.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.7.0",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
